Agregue la parte inicial de la cabecera al Blog

--- a/Blog3.html
+++ b/Blog3.html
@@ -3,8 +3,11 @@
          <title>Este es un tercer Blog de Prueba 2020</title> 
          <link rel="stylesheet" href="css/estilos.css"/>   
      </head>
-     <body>
+     <body> 
          <div id="container">
+             <div id = "cabecera3">
+                 Aquí inicia mi Cabecera
+                 </div>>
              <div id = "post">
                 <h1>Estoy probando comandos con Git</h1>
                 
