Finalice mi cabecera con un diseño diferente

--- a/Blog3.html
+++ b/Blog3.html
@@ -6,11 +6,17 @@
      <body> 
          <div id="container">
              <div id = "cabecera3">
-                 Aquí inicia mi Cabecera
+                 Aquí inicia mi Cabecera Hyperblog
+                 <span id= "tagline">
+                     Nuestro Blog Esta Espectacular
+                 </span>
                  </div>>
              <div id = "post">
                 <h1>Estoy probando comandos con Git</h1>
-                
+                <p> Continuamos con nuestra práctica de 
+                    Git y sus comandos, esperamos nos vaya
+                    muy bien
+                </p>
              </div>
          </div>
      </body>
