Agregue un parrafo al Blog3

--- a/Blog3.html
+++ b/Blog3.html
@@ -7,7 +7,9 @@
          <div id="container">
              <div id = "post">
                 <h1>Estoy probando comandos con Git</h1>
-                
+                <p>Esta es la rama master y tengo otra
+                    rama llamada Cabecera3.
+                </p>
              </div>
          </div>
      </body>
