He creado el archivo de mi historia

--- a/Blog3.html
+++ b/Blog3.html
@@ -10,7 +10,7 @@
                  <span id= "tagline">
                      Nuestro Blog Esta Espectacular
                  </span>
-                 </div>>
+                 </div>
              <div id = "post">
                 <h1>Estoy probando comandos con Git</h1>
                 <p> Continuamos con nuestra práctica de 
