--- a/Blog3.html
+++ b/Blog3.html
@@ -1,7 +1,7 @@
 <html>
      <head>
          <title>Este es un tercer Blog de Prueba 2020</title> 
-         <link rel="stylesheet" href="css/estilos.css"/>   
+         <link rel="stylesheet" href="css/Estilos3.css"/>   
      </head>
      <body> 
          <div id="container">
