--- a/Blog3.html
+++ b/Blog3.html
@@ -1,7 +1,7 @@
 <html>
      <head>
          <title>Este es un tercer Blog de Prueba 2020</title> 
-         <link rel="stylesheet" href="css/estilos.css"/>   
+         <link rel="stylesheet" href="css/Estilos3.css"/>   
      </head>
      <body> 
          <div id="container">
@@ -10,7 +10,7 @@
                  <span id= "tagline">
                      Nuestro Blog Esta Espectacular
                  </span>
-                 </div>>
+                 </div>
              <div id = "post">
                 <h1>Estoy probando comandos con Git</h1>
                 <p> Continuamos con nuestra práctica de 
@@ -18,6 +18,9 @@
                     muy bien
                 </p>
              </div>
+	     <div id="footer">
+		     Trabajando mucho con Git y Github 28 de septiembre	
+	     </div>
          </div>
      </body>
 </html>
