--- a/Blog3.html
+++ b/Blog3.html
@@ -14,7 +14,7 @@
                 <h1>Este es el t&iacute;tulo atractivo e interesante del post</h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir informac&iacute;on y tus ideas. Mucho m&aacute;s que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
-                <p>Suscribete y dale like</p>
+                <p>Suscribete y dale me gusta</p>
             </div>
         </div>
     </body>
