--- a/Blog3.html
+++ b/Blog3.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a Hyperblog 2.0</title>
+        <title>Este es mi Hyperblog 2.0, solo de Yo</title>
         <link rel="stylesheet" href="css/Estilos3.css" />
     </head>
     <body>
@@ -8,12 +8,12 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/spacecap.png" />
                 Hyperblog
-                <span id="tagline">Iglesia de DIOS Ministerial d Jesucristo Internacional</span>
+                <span id="tagline">Iglesia de DIOS Ministerial de Jesucristo Internacional</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
-                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
         </div>
